--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script src="jquery.js"></script>
-    <script src="page-server-translator.js"></script>
+    <script src="steamCall.js"></script>
   </head>
   <body>
     <div id="results">
