Added an embedded player profile box.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <script src="steamCall.js"></script>
   </head>
   <body>
-    <div id="results">
-    </div>
+    <div id="results"></div>
+     <div id="profileViewer"></div>
     <script>
       loadXML();
     </script>
