added playerClass.js script for future work.

--- a/playerInfo.html
+++ b/playerInfo.html
@@ -4,6 +4,7 @@
   
   <head>
     <script src="jquery.js"></script>
+    <script src="playerClass.js"></script>
     <script src="steamCall.js"></script>
     <link rel="stylesheet" type="text/css" href="squadFindr.css">
     <title>Player Information Page</title>
