Loaded dummy data and matching scripts.

--- a/playerInfo.html
+++ b/playerInfo.html
@@ -5,7 +5,9 @@
   <head>
     <script src="jquery.js"></script>
     <script src="playerClass.js"></script>
+    <script src="dummyData.js"></script>
     <script src="steamCall.js"></script>
+    <script src="matchMakingBehavior.js"></script>
     <link rel="stylesheet" type="text/css" href="squadFindr.css">
     <title> Player Information Page</title>
   </head>
