loaded testing script.

--- a/playerInfo.html
+++ b/playerInfo.html
@@ -8,6 +8,7 @@
     <script src="dummyData.js"></script>
     <script src="steamCall.js"></script>
     <script src="matchMakingBehavior.js"></script>
+    <script src="matchTests.js"></script>
     <link rel="stylesheet" type="text/css" href="squadFindr.css">
     <title> Player Information Page</title>
   </head>
